syntax = "proto3";

package checkout_v1;

option go_package = "route256/checkout/pkg/checkout_v1;checkout_v1";

import "google/protobuf/empty.proto";

service CheckoutV1 {
    rpc AddToCart (AddToCartParams) returns (google.protobuf.Empty) {};
    rpc DeleteFromCart (DeleteFromCartParams) returns (google.protobuf.Empty) {};
    rpc ListCart (ListCartParams) returns (ListCartResponse) {};
    rpc Purchase (PurchaseParams) returns (google.protobuf.Empty) {};
}

message AddToCartParams {
    int64 user = 1;
    uint32 sku = 2;
    uint32 count = 3;
}

message DeleteFromCartParams {
    int64 user = 1;
    uint32 sku = 2;
    uint32 count = 3;
}

message ListCartParams {
    int64 user = 1;
}

message ListCartItem {
    uint32 sku = 1;
    uint32 count = 2;
    string name = 3;
    uint32 price = 4;
}

message ListCartResponse {    
    repeated ListCartItem items = 1;
    uint32 totalPrice = 2; 
}

message PurchaseParams {
    int64 user = 1;
}